dataset1235/2025-2/610742602/users/852229192/executions/677928262_704983377.log
== RUN (2025-08-28 16:07:20)
-- CODE: 
X = int (input('digite o valor de X:'))
Y = int(input('digite o valor de Y':))
quocienteinteiro = X//Y
restointeiro = X%Y
quocientereal = X/Y
produto = X*Y
potencia = Y**3

print(quocienteinteiro)
print (restointeiro)
print (quocientereal)
print (produto)
print (potencia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 2
    Y = int(input('digite o valor de Y':))
                                       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 2
    Y = int(input('digite o valor de Y':))
                                       ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 2
    Y = int(input('digite o valor de Y':))
                                       ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 2
    Y = int(input('digite o valor de Y':))
                                       ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 2
    Y = int(input('digite o valor de Y':))
                                       ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 2
    Y = int(input('digite o valor de Y':))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:01:40)
-- CODE: 
dividendo = input ()
divisor = input()
print()
print (dividendo/divisor)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (dividendo/divisor)
           ~~~~~~~~~^~~~~~~~
TypeError: unsupported operand type(s) for /: 'str' and 'str'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (dividendo/divisor)
           ~~~~~~~~~^~~~~~~~
TypeError: unsupported operand type(s) for /: 'str' and 'str'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (dividendo/divisor)
           ~~~~~~~~~^~~~~~~~
TypeError: unsupported operand type(s) for /: 'str' and 'str'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (dividendo/divisor)
           ~~~~~~~~~^~~~~~~~
TypeError: unsupported operand type(s) for /: 'str' and 'str'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (dividendo/divisor)
           ~~~~~~~~~^~~~~~~~
TypeError: unsupported operand type(s) for /: 'str' and 'str'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (dividendo/divisor)
           ~~~~~~~~~^~~~~~~~
TypeError: unsupported operand type(s) for /: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:01:30)
-- CODE: 
dividendo = input ()
divisor = input()
print()
print (dividendo//divisor)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (dividendo//divisor)
           ~~~~~~~~~^^~~~~~~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (dividendo//divisor)
           ~~~~~~~~~^^~~~~~~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (dividendo//divisor)
           ~~~~~~~~~^^~~~~~~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (dividendo//divisor)
           ~~~~~~~~~^^~~~~~~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (dividendo//divisor)
           ~~~~~~~~~^^~~~~~~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (dividendo//divisor)
           ~~~~~~~~~^^~~~~~~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:06:55)
-- CODE: 
X = int (input('digite o valor de X:'))
Y = imt(input(digite o valor de Y:))
quocienteinteiro = X//Y
restointeiro = X%Y
quocientereal = X/Y
produto = X*Y
potencia = Y**3

print(quocienteinteiro)
print (restointeiro)
print (quocientereal)
print (produto)
print (potencia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 2
    Y = imt(input(digite o valor de Y:))
                  ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 2
    Y = imt(input(digite o valor de Y:))
                  ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 2
    Y = imt(input(digite o valor de Y:))
                  ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 2
    Y = imt(input(digite o valor de Y:))
                  ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 2
    Y = imt(input(digite o valor de Y:))
                  ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 2
    Y = imt(input(digite o valor de Y:))
                  ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:08:31)
-- CODE: 
X = int (input('digite o valor de X:'))
Y = int(input('digite o valor de Y:'))
quociente_inteiro = X // Y
resto_inteiro = X % Y
quociente_real = X/Y
produto = X * Y
potencia = Y ** 3

print(quociente_inteiro)
print (resto_inteiro)
print (quociente_real)
print (produto)
print (potencia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 16:08:49)
-- CODE: 
X = int (input('digite o valor de X:'))
Y = int(input('digite o valor de Y:'))
quociente_inteiro = X // Y
resto_inteiro = X % Y
quociente_real = X/Y
produto = X * Y
potencia = Y ** 3

print(quociente_inteiro)
print (resto_inteiro)
print (quociente_real)
print (produto)
print (potencia)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:08:37)
-- CODE: 
X = int (input('digite o valor de X:'))
Y = int(input('digite o valor de Y:'))
quociente_inteiro = X // Y
resto_inteiro = X % Y
quociente_real = X/Y
produto = X * Y
potencia = Y ** 3

print(quociente_inteiro)
print (resto_inteiro)
print (quociente_real)
print (produto)
print (potencia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:01:18)
-- CODE: 
dividendo = input ()
divisor = input()
print()
print (dividendo // divisor)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (dividendo // divisor)
           ~~~~~~~~~~^^~~~~~~~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (dividendo // divisor)
           ~~~~~~~~~~^^~~~~~~~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (dividendo // divisor)
           ~~~~~~~~~~^^~~~~~~~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (dividendo // divisor)
           ~~~~~~~~~~^^~~~~~~~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (dividendo // divisor)
           ~~~~~~~~~~^^~~~~~~~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (dividendo // divisor)
           ~~~~~~~~~~^^~~~~~~~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:07:15)
-- CODE: 
X = int (input('digite o valor de X:'))
Y = imt(input('digite o valor de Y':))
quocienteinteiro = X//Y
restointeiro = X%Y
quocientereal = X/Y
produto = X*Y
potencia = Y**3

print(quocienteinteiro)
print (restointeiro)
print (quocientereal)
print (produto)
print (potencia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 2
    Y = imt(input('digite o valor de Y':))
                                       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 2
    Y = imt(input('digite o valor de Y':))
                                       ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 2
    Y = imt(input('digite o valor de Y':))
                                       ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 2
    Y = imt(input('digite o valor de Y':))
                                       ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 2
    Y = imt(input('digite o valor de Y':))
                                       ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 2
    Y = imt(input('digite o valor de Y':))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
